# python-pcloud

./: .gitignore  CHANGES.rst  README.rst  pyproject.toml
.github/workflows/: pcloud-test.yml
src/pcloud/: api.py  crypto.py
src/pcloud/tests/: test_integration.py
