# -*- coding: utf-8 -*-
package = "pcloud"

[project]
name = "pcloud"
version = "1.5.dev0"
description = "A client library for pCloud"
readme = "README.rst"
authors = [
    { name = "Tom Gross", email = "itconsense@gmail.com" }
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Environment :: Other Environment",
    "Environment :: Web Environment",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

keywords = ["Python", "pCloud", "REST"]

dependencies = [
    "httpx>=0.28.1",
    "setuptools>=80.9.0",
    "wheel>=0.45.1",
]

[project.optional-dependencies]
# development dependency groups
test = [
    "pytest==8.4.2",
    "pytest-sugar==1.1.1",
    "wheel==0.45.1",
    "flake8==7.3.0",
    "playwright==1.55.0",
    "multipart==1.3.0",
    "zipp>=3.23.0"
]

# crypto support
crypto = [
    "pycryptodome>=3.20.0"
]
